Battleships: fixed bug where battleships would become undefined if push outside of the grid

--- a/Battleships/styles.css
+++ b/Battleships/styles.css
@@ -2,6 +2,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 body {
@@ -61,5 +69,13 @@ body {
 }
 
 .miss {
-  background: crimson;
+  background: crimson !important;
+}
+
+.hit {
+  background: steelblue !important;
+}
+
+.ship {
+  background: tomato;
 }
